# Income_Prediction

./: .dockerignore  Dockerfile  LICENSE  README.md  fly.toml  income_prediction.py  main.py  notebook.ipynb  predict.py  pyproject.toml  train.py
